--- a/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
+++ b/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Task.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
