--- a/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj.filters
+++ b/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Task.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Task.h">
