--- a/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
+++ b/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
@@ -134,12 +134,14 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Task.cpp" />
+    <ClCompile Include="TextureHolder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
     <ClInclude Include="Mascot.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="TextInput.h" />
+    <ClInclude Include="TextureHolder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
