--- a/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
+++ b/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mascot.cpp" />
     <ClCompile Include="Task.cpp" />
     <ClCompile Include="TextInput.cpp" />
     <ClCompile Include="TextureHolder.cpp" />
