--- a/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
+++ b/HFALL2025/Fall2025HackathonGame/Fall2025HackathonGame.vcxproj
@@ -132,6 +132,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="LayoutManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mascot.cpp" />
     <ClCompile Include="Task.cpp" />
@@ -140,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="LayoutManager.h" />
     <ClInclude Include="Mascot.h" />
     <ClInclude Include="Task.h" />
     <ClInclude Include="TextInput.h" />
